# ppt-skill

./: .gitignore  README.md  SKILL.md  config.example.txt  okskills.yaml  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-pipeline-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-spec-extraction/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-content-gathering/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/06-agent-per-page/: 06-01-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
assets/Illustration/: INDEX.md
references/: prompt-ppt-content.md  prompt-ppt-layout.md  spec-format.md
scripts/: generate_pptx_from_md.py  ppt_cli.py
scripts/ppt_skill/: __init__.py  agent_loop.py  config.py  extract_spec_v2.py  gen_pptx.py  illustration_finder.py  merge_and_generate.py  outline_parser.py  paginate.py  pipeline.py  ppt_generator.py  ppt_style_eval.py  ppt_to_png.py  quality.py  slide_generator.py  slide_validator.py  style_evaluator.py  vl_analyze.py
scripts/ppt_skill/agent_per_page/: agent.py  orchestrator.py  tools.py
scripts/ppt_skill/cli/: content_commands.py  spec_commands.py
scripts/ppt_skill/content/: __init__.py  gatherer.py  model.py  outline_generator.py
specs/test/: logic.yaml  spec.yaml
specs/副本关于2026年-2028年度商旅平台酒店供应商采购立项及预算申请0417/: logic.yaml  spec.yaml
src/ppt_skill/: __init__.py  config.py  pipeline.py
tests/: conftest.py  ppt.md  test_content_gathering.py  test_converter.py  test_e2e.py  test_quality_checker.py  test_spec_extraction.py
(+66 files in other folders)
