[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ppt-skill"
version = "0.1.0"
description = "AI-powered PPT generation from SVGs with native DrawingML shapes"
requires-python = ">=3.9"
dependencies = [
    "python-pptx>=0.6.21",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
