[project]
name = "ppt-skill"
version = "0.1.0"
description = "AI-powered PPT generation from SVG with native DrawingML shapes — spec extraction, content gathering, and PPTX export"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]

[tool.coverage.run]
source = ["scripts"]
omit = [
    "scripts/ppt_cli.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
