[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ppt-skill"
version = "0.1.0"
description = "AI-powered PPT generation from SVG with native DrawingML shapes — spec extraction, content gathering, and PPTX export"
requires-python = ">=3.10"
dependencies = [
    "python-pptx>=0.6.21",
    "Pillow>=9.0.0",
    "PyYAML>=6.0",
    "lxml>=4.9.0",
]

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["ppt_skill*"]

[tool.coverage.run]
source = ["scripts"]
omit = [
    "scripts/ppt_cli.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
